# lif2ometiff

./: README.md  main.py  main.spec  pyproject.toml
.github/workflows/: mypy.yml
src/lif2ometiff/: __init__.py  savetiff.py
