[project]
name = "lif2ometiff"
version = "1.0.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["bioio","bioio-lif","tifffile"]
[project.optional-dependencies]
dev = ["bumpver","mypy", "pyinstaller"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.mypy]
python_version = '3.14'
mypy_path = "src"
packages = "lif2ometiff"
strict = true

[tool.bumpver]
current_version = "1.0.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"src/lif2ometiff/version.py" = [
    "{version}"
]